--- a/Salary_Statement3.html
+++ b/Salary_Statement3.html
@@ -15,10 +15,10 @@
     letter-spacing: 7px;
     font-style: italic;
     position: fixed;
-    top: 97%;
+    top: 98%;
     left: 37%;
     transform: translate(-50%, -50%) rotate(0deg);
-    font-size: 37px;
+    font-size: 27px;
     color: #fad457; 
     z-index: 0;
     pointer-events: none;
@@ -572,8 +572,8 @@ const otherRecord = otherSheetData.find(item =>
     let html = `<table style="font-size:11px;">
     <thead>
         <tr>
-            <th>MONTH</th><th>BASIC PAY</th><th>ADDL ALLOW</th><th>DA</th><th>HRA</th>
-            <th>MA</th><th>CONV. ALLOW</th>
+            <th>MONTH</th><th>BASIC PAY</th><th>ADDL ALW</th><th>DA</th><th>HRA</th>
+            <th>MA</th><th>CONV. ALW</th>
            <!-- <th>DA ARR</th> -->
             <th>GROSS PAY</th>
             <th>GPF</th><th>GSLI</th><th>P.TAX</th><th>I.TAX</th><th>NET PAY</th>
