--- a/SalStm_TaxCal.html
+++ b/SalStm_TaxCal.html
@@ -206,7 +206,7 @@ th{
   
     .right-border {
       border-right: 2px solid blue;
-      line-height: 1.3;
+      line-height: 1.4;
     }
     input[type="number"], input[type="text"] {
       width: 120px;
@@ -292,9 +292,9 @@ th{
         <tr>
           <td style="text-align: left;" class="right-border" >
             4) Any other Income (Interest etc.):<br>
-            <span class="sub-label">(i) &ensp;<input type="text" id="oi1_text" style="text-align: left; width: 170px; height: 7px;" placeholder="Mention Source of Income"></span> &emsp;&emsp;
+            <span class="sub-label">(i) &ensp;<input type="text" id="oi1_text" style="text-align: left; width: 170px; height: 7px;" placeholder="Mention Source of Income"></span> &emsp;
             <input type="number" id="oi1" value="0" oninput="calculateAll()"><br>
-            <span class="sub-label">(ii) <input type="text" id="oi2_text" style="text-align: left; width: 170px; height: 7px;" placeholder="Mention Source of Income" ></span> &emsp;&emsp;
+            <span class="sub-label">(ii) <input type="text" id="oi2_text" style="text-align: left; width: 170px; height: 7px;" placeholder="Mention Source of Income" ></span> &emsp;
             <input type="number" id="oi2" value="0" oninput="calculateAll()"><br>
             <span class="sub-label">(iii) Savings Account Interest:</span> &ensp;&emsp;
             <input type="number" id="oi3" value="0" oninput="calculateAll()"><br>
