--- a/SalStm_TaxCal.html
+++ b/SalStm_TaxCal.html
@@ -206,7 +206,7 @@ th{
   
     .right-border {
       border-right: 2px solid blue;
-      line-height: 1.4;
+      line-height: 1.2;
     }
     input[type="number"], input[type="text"] {
       width: 120px;
@@ -319,7 +319,7 @@ th{
             8) Taxable Income (Rounded off U/S 288A):
           </td>
           <td style="text-align: center;">
-            <style="text-align: center;" type="number" id="tot5" disabled value="0"><br>
+            <input type="number" id="tot5" disabled value="0"><br>
             <input type="number" id="NPS" value="0" oninput="calculateAll()"><br>
             <input type="number" id="Taxable_Inc" disabled value="0"><br>
             <input type="number" id="Taxable_Inc_round" disabled value="0">
