--- a/SalStm_TaxCal.html
+++ b/SalStm_TaxCal.html
@@ -381,10 +381,12 @@ th{
 <script>
     /*email id checking */
     const allowedEmails = [
-  "ujlmndl@gmail.com",
-  "evbasoftware@gmail.com",
-  "d.p.denayek@gmail.com",
-  "blarakesh@gmail.com"           
+        "circlelabpur@gmail.com",
+        "ujlmndl@gmail.com",
+        "evbasoftware@gmail.com",
+        "d.p.denayek@gmail.com",
+        "blarakesh@gmail.com", 
+        "swapan.bera98@gmail.com"
 ];
 
 function handleCredentialResponse(response) {
