--- a/SalStm_TaxCal.html
+++ b/SalStm_TaxCal.html
@@ -382,11 +382,11 @@ th{
     /*email id checking */
     const allowedEmails = [
         "circlelabpur@gmail.com",
-        "ujlmndl@gmail.com",
+      /*  "ujlmndl@gmail.com",*/
         "evbasoftware@gmail.com",
         "d.p.denayek@gmail.com",
         "blarakesh@gmail.com", 
-        "swapan.bera98@gmail.com"
+     /*   "swapan.bera98@gmail.com"*/
 ];
 
 function handleCredentialResponse(response) {
