--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -382,11 +382,9 @@ th{
     /*email id checking */
     const allowedEmails = [
         "circlelabpur@gmail.com",
-      /*  "ujlmndl@gmail.com",*/
+        "ujlmndl@gmail.com",
         "evbasoftware@gmail.com",
-        "d.p.denayek@gmail.com",
-        "blarakesh@gmail.com", 
-     /*   "swapan.bera98@gmail.com"*/
+        "swapan.bera98@gmail.com"
 ];
 
 function handleCredentialResponse(response) {
