--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -265,8 +265,9 @@ th{
     <!-- tax calculator table start -->
     
  <div class="container">
-    <h3 style="text-align: center; margin-bottom: 5px;">Income Tax calculation for the Financial Year 2025-26</h3>
-    <h4 style="text-align: center; margin-top: 0;">(Assessment Year 2026-2027)</h4>
+     <h3 style="text-align: center; margin-bottom: 5px;">STATEMENT OF INCOME (SALARY & OTHER SOURCES) AND INCOME TAX</h3>
+    <h3 style="text-align: center; margin-bottom: 5px;">COMPUTATION SHEET  For  Financial Year-2025-2026 Assessment Year 2026-2027.</h3>
+    <h4 style="text-align: center; margin-top: 0;">Name of the Employee : ….............................................  PAN-  …....................... </h4>                                                                  </h4>
 
     <table>
       <thead>
