--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -266,9 +266,10 @@ th{
     
  <div class="container">
      <h3 style="text-align: center; margin-bottom: 5px;">STATEMENT OF INCOME (SALARY & OTHER SOURCES) AND INCOME TAX</h3>
-    <h3 style="text-align: center; margin-bottom: 5px;">COMPUTATION SHEET  For  Financial Year-2025-2026 Assessment Year 2026-2027.</h3>
-    <h4 style="text-align: center; margin-top: 0;">Name of the Employee : ….............................................  PAN-  …....................... </h4>                                                                  </h4>
-
+    <h3 style="text-align: center; margin-bottom: 5px;">Computation Sheet For Financial Year-${year} - ${year+1} Assessment Year ${year+1}-${year+2}.</h3>
+    <h4 style="text-align: center; margin-top: 0;">Name of the Employee : ${teacherName}  PAN- ${pan} </h4>
+    <h4 style="text-align: center; margin-top: 0;">Name of the Dept:- Education Deptt (Purba Medinipur D.P.S.C.), TAN-CALPO6464D </h4>                                                                  </h4>
+     
     <table>
       <thead>
         <tr>
