--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -897,12 +897,12 @@ document.getElementById("next_btn").addEventListener("click", () => navigateEmpl
 
       if(year){
     document.getElementById("fyTitle").innerText =
-        `Income Tax calculation for the Financial Year ${year}-${year+1} (Assessment Year ${year+1}-${year+2})`;
+        `Computation Sheet for Financial Year ${year}-${year+1} (Assessment Year ${year+1}-${year+2})`;
       }
       
       if(teacher_Name){
     document.getElementById("name_Pan").innerText =
-        `Name of the Employee : ${teacher_Name},      PAN- ${pan}`;
+        `Name of the Employee : ${teacher_Name},  (PAN- ${pan})`;
       }
         
       if (othInc1 !== null) {
