--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -266,9 +266,9 @@ th{
     
  <div class="container">
      <h3 style="text-align: center; margin-bottom: 5px;">STATEMENT OF INCOME (SALARY & OTHER SOURCES) AND INCOME TAX</h3>
-    <h3 id="fyTitle" style="text-align:center; margin-bottom:5px;"></h3>
-    <h3 id="name_Pan" style="text-align:center; margin-bottom:5px;"></h3>
-    <h3 style="text-align: center; margin-top: 0;">Name of the Dept:- Education Deptt (Purba Medinipur D.P.S.C.), TAN-CALPO6464D </h3>                                                                  </h4>
+    <h4 id="fyTitle" style="text-align:center; margin-bottom:2px;"></h4>
+    <h3 id="name_Pan" style="text-align:center; margin-bottom:2px;"></h3>
+    <h5 style="text-align: center; margin-bottom:2px;">Name of the Dept:- Education Deptt (Purba Medinipur D.P.S.C.), TAN-CALPO6464D </h5>                                                                  </h4>
      
     <table>
       <thead>
