--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -363,7 +363,7 @@ th{
             19) Net Tax Payable (17-18):<br>
             20) Less Tax deducted at source u/s 192(1) upto January,2026 (TDS):<br>
            <span class="sub-label" id="TP_Refund_Text> </span> 
-       <!--      <input type="text" id="TP_Refund_Text" value="21) Tax Payable/Refund" disabled style="width: 250px; height: 15px; text-align: left; border:none; background:none;"> -->
+            <input type="text" id="TP_Refund_Text" style="width: 250px; height: 7px; text-align: left; border:none; background:none;" disabled>
           </td>
           <td style="text-align: center;">
             <input type="number" id="a_87" disabled value="0"><br>
