--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -362,7 +362,9 @@ th{
             18) Less: relief u/s 89 if any:<br>
             19) Net Tax Payable (17-18):<br>
             20) Less Tax deducted at source u/s 192(1) upto January,2026 (TDS):<br>
-            <input type="text" id="TP_Refund_Text" style="width: 250px; height: 15px; text-align: left; border:none; background:none;" disabled>
+           <h6 id="TP_Refund_Text" style="text-align:left; margin-bottom:2px;"></h6>
+              
+              <input type="text" id="TP_Refund_Text" style="width: 250px; height: 10px; text-align: left; border:none; background:none; " disabled>
           </td>
           <td style="text-align: center;">
             <input type="number" id="a_87" disabled value="0"><br>
