--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -362,8 +362,8 @@ th{
             18) Less: relief u/s 89 if any:<br>
             19) Net Tax Payable (17-18):<br>
             20) Less Tax deducted at source u/s 192(1) upto January,2026 (TDS):<br>
-
-            <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; left: 20px; border:none; background:none; font-size:20px;" disabled>
+<span id="TP_Refund_Text" style="font-size:20px;"></span>
+           <!-- <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; left: 20px; border:none; background:none; font-size:20px;" disabled> -->
           </td>
           <td style="text-align: center;">
             <input type="number" id="a_87" disabled value="0"><br>
@@ -1034,16 +1034,15 @@ setInterval(updateGrossFromStorage, 500);
       setVal('NTP18', ntp18);
       
       let tds = getVal('tds');
-        if (ntp18-tds=0) {
-        setVal('TP_Refund_Text', "21) Tax Payable / Amount Refundable:");
-        setVal('Final_Result', (ntp18 - tds));
-        }
-      if (ntp18 > tds) {
-        setVal('TP_Refund_Text', "21) Tax Payable (19-20):");
-        setVal('Final_Result', (ntp18 - tds));
+        if ((ntp18 - tds) === 0) {
+          setVal('TP_Refund_Text', "21) Tax Payable / Amount Refundable:");
+          setVal('Final_Result', 0);
+        } else if (ntp18 > tds) {
+          setVal('TP_Refund_Text', "21) Tax Payable (19-20):");
+          setVal('Final_Result', ntp18 - tds);
       } else {
-        setVal('TP_Refund_Text', "21) Amount Refundable (20-19):");
-        setVal('Final_Result', (tds - ntp18));
+          setVal('TP_Refund_Text', "21) Amount Refundable (20-19):");
+          setVal('Final_Result', tds - ntp18);
       }
     }
  
