--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -362,8 +362,8 @@ th{
             18) Less: relief u/s 89 if any:<br>
             19) Net Tax Payable (17-18):<br>
             20) Less Tax deducted at source u/s 192(1) upto January,2026 (TDS):<br>
-<!-- <span id="TP_Refund_Text" style="font-size:20px;"></span> -->
-            <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; position: relative; left: 20px; border:none; background:none; font-size:20px;" disabled> 
+
+            <input type="text" id="TP_Refund_Text" style="width: 370px; height: 10px; text-align: left; border:none; background:none; font-size:20px; position: relative; left: 10px;" disabled> 
           </td>
           <td style="text-align: center;">
             <input type="number" id="a_87" disabled value="0"><br>
