--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -586,7 +586,7 @@ const otherRecord = otherSheetData.find(item =>
             <th>MA</th><th>CONV. ALW</th>
            <!-- <th>DA ARR</th> -->
             <th>GROSS TOTAL</th>
-            <tr> <th>DEDUCTION</th> </tr>
+       <!--     <tr> <th>DEDUCTION</th> </tr> -->
             <th>GPF</th><th>GSLI</th><th>P.TAX</th><th>I.TAX</th><th>NET PAY</th>
         </tr>
     </thead>
