--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -582,12 +582,23 @@ const otherRecord = otherSheetData.find(item =>
     <h5 style="color: #8e14e0;">STATEMENT OF SALARY FROM MARCH- ${year} TO FEBRUARY-${year+1} </h5>
        
         <tr>
-            <th>MONTH</th><th>BASIC PAY</th><th>ADDL ALW</th><th>DA</th><th>HRA</th>
-            <th>MA</th><th>CONV. ALW</th>
-           <!-- <th>DA ARR</th> -->
-            <th>GROSS TOTAL</th>
-           <tr> <th>DEDUCTION</th> </tr>
-            <th>GPF</th><th>GSLI</th><th>P.TAX</th><th>I.TAX</th><th>NET PAY</th>
+            <th rowspan="2">MONTH</th>
+            <th rowspan="2">BASIC PAY</th>
+            <th rowspan="2">ADDL ALW</th>
+            <th rowspan="2">DA</th>
+            <th rowspan="2">HRA</th>
+            <th rowspan="2">MA</th>
+            <th rowspan="2">CONV. ALW</th>
+           <!-- <th rowspan="2">DA ARR</th> -->
+            <th rowspan="2">GROSS TOTAL</th>
+            <th colspan="4">DEDUCTION</th> 
+            <th rowspan="2">NET PAY</th>
+        </tr>
+        <tr>
+            <th>GPF</th>
+            <th>GSLI</th>
+            <th>P.TAX</th>
+            <th>I.TAX</th>
         </tr>
     </thead>
     <tbody>`;
