--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -578,7 +578,7 @@ const otherRecord = otherSheetData.find(item =>
 
     let html = `<table style="font-size:11px;">
     <thead>
-    <h2 style="color: #8e14e0; position: relative; left: 177px;">STATEMENT OF SALARY FROM MARCH- ${year} TO FEBRUARY-${year+1} </h2>
+    <h2 style="color: #8e14e0; position: relative; left: 17px;">STATEMENT OF SALARY FROM MARCH- ${year} TO FEBRUARY-${year+1} </h2>
        
         <tr>
             <th rowspan="2">MONTH</th>
@@ -594,10 +594,10 @@ const otherRecord = otherSheetData.find(item =>
             <th rowspan="2">NET PAY</th>
         </tr>
         <tr>
-            <th>GPF</th>
-            <th>GSLI</th>
-            <th>P.TAX</th>
-            <th>I.TAX</th>
+            <th class="no-top-border">GPF</th>
+            <th class="no-top-border">GSLI</th>
+            <th class="no-top-border">P.TAX</th>
+            <th class="no-top-border">I.TAX</th>
         </tr>
     </thead>
     <tbody>`;
