--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -264,10 +264,10 @@ th{
     <!-- tax calculator table start -->
     
  <div class="container">
-    <h3 style="text-align: center; margin-bottom: 0px;">STATEMENT OF INCOME (SALARY & OTHER SOURCES) AND INCOME TAX</h3>
-    <h4 id="fyTitle" style="text-align:center; margin-bottom:0px;"></h4>
-    <h3 id="name_Pan" style="text-align:center; margin-bottom:0px;"></h3>
-    <h5 style="text-align: center; margin-bottom:0px;">Name of the Dept:- Education Deptt (Purba Medinipur D.P.S.C.), TAN-CALPO6464D </h5>                                                                  </h4>
+    <h3 style="text-align: center;">STATEMENT OF INCOME (SALARY & OTHER SOURCES) AND INCOME TAX</h3>
+    <h4 id="fyTitle" style="text-align:center;"></h4>
+    <h3 id="name_Pan" style="text-align:center;"></h3>
+    <h5 style="text-align: center;">Name of the Dept:- Education Deptt (Purba Medinipur D.P.S.C.), TAN-CALPO6464D </h5>                                                                  </h4>
      
     <table>
       <thead>
