--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -137,6 +137,10 @@ th{
     color: #555;
     text-align:left;
 }
+    h3, h4, h5{
+    margin-top: 0;
+    margin-bottom: 0;
+    }
 
 /* ================= PRINT SETTINGS ================= */
 @media print {
