--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -143,6 +143,11 @@ th{
     }
 
 /* ================= PRINT SETTINGS ================= */
+    @page{
+    size: A4;
+    margin: 15mm;
+    }
+    
 @media print {
 
     /* ❌ Hide upload & controls */
