--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -143,10 +143,6 @@ th{
     }
 
 /* ================= PRINT SETTINGS ================= */
-    @page{
-    size: A4;
-    margin: 15mm;
-    }
     
 @media print {
 
@@ -303,9 +299,9 @@ th{
           <td style="text-align: left;" class="right-border" >
             4) Add.: Any other Income reported by the employee:<br>
             <span class="sub-label">(a) Income from House property u/s 26 to 27:</span> &ensp;&emsp;
-            <input type="number" id="oia" value="0" oninput="calculateAll()"><br>
+            <input type="number" id="oia" value="0" oninput="calculateAll()" style="width: 70px;"><br>
             <span class="sub-label">(b) Income from capital gain (less Income from exempted u/s 10(38):</span> &ensp;&emsp;
-            <input type="number" id="oib" value="0" oninput="calculateAll()"><br>
+            <input type="number" id="oib" value="0" oninput="calculateAll()" style="width: 70px;"><br>
         
             <span class="sub-label">(c) &ensp;<input type="text" id="oi1_text" style="text-align: left; width: 170px; height: 7px;" placeholder="Mention Source of Income"></span> &emsp;
             <input type="number" id="oi1" value="0" oninput="calculateAll()"><br>
