--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -296,7 +296,7 @@ th{
         <tr>
           <td style="text-align: left;" class="right-border" >
             4) Add.: Any other Income reported by the employee:<br>
-            <span class="sub-label">(a) Income from House property u/s 26 to 27:</span> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            <span class="sub-label">(a) Income from House property u/s 26 to 27:</span> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             <input type="number" id="oia" value="0" oninput="calculateAll()" style="width: 70px;"><br>
             <span class="sub-label">(b) Income from capital gain (less Income from exempted u/s 10(38):</span> &ensp;
             <input type="number" id="oib" value="0" oninput="calculateAll()" style="width: 70px;"><br>
@@ -581,7 +581,7 @@ const otherRecord = otherSheetData.find(item =>
 
     let html = `<table style="font-size:11px;">
     <thead>
-    <h2 style="color: #8e14e0; position: relative; left: 7px;">STATEMENT OF SALARY FROM MARCH- ${year} TO FEBRUARY-${year+1} </h2>
+    <h2 style="color: #8e14e0; position: relative; left: 7px; margin-bottom: 0;">STATEMENT OF SALARY FROM MARCH- ${year} TO FEBRUARY-${year+1} </h2>
        
         <tr>
             <th rowspan="2">MONTH</th>
