--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -296,7 +296,7 @@ th{
         <tr>
           <td style="text-align: left;" class="right-border" >
             4) Add.: Any other Income reported by the employee:<br>
-            <span class="sub-label">(a) Income from House property u/s 26 to 27:</span> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            <span class="sub-label">(a) Income from House property u/s 26 to 27:</span> &ensp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             <input type="number" id="oia" value="0" oninput="calculateAll()" style="width: 70px;"><br>
             <span class="sub-label">(b) Income from capital gain (less Income from exempted u/s 10(38):</span> &ensp;
             <input type="number" id="oib" value="0" oninput="calculateAll()" style="width: 70px;"><br>
