--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -170,6 +170,7 @@ th{
     /* ✅ Tables full width */
     table {
         width: 95% !important;
+        height: 77% !important;
         box-shadow: none;
         webkit-print-color-adjust: exact;
         print-color-adjust: exact;
@@ -384,7 +385,7 @@ th{
       </tbody>
     </table>
      </div>
-    </div>    
+    </div>    <br><br>
      
 <div id="table_container"></div> <!-- Salary Statement table -->
                 
