--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -391,10 +391,10 @@ th{
      </div>
     </div>    <br>
      
-<div id="table_container"> <br><br><br> <!-- Salary Statement table -->
+<div id="table_container"> </div><br><br><br> <!-- Salary Statement table -->
                                                         	
-<h5 style="text-align: center;">Signature of DDO        Signature of Employee</h5>
-</div>
+<!-- <h5 style="text-align: center;">Signature of DDO        Signature of Employee</h5> -->
+
 	
 <script>
     /*email id checking */
