--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -816,7 +816,7 @@ const otherRecord = otherSheetData.find(item =>
         <td>${Math.round(totalNet)}</td>
     </tr>
     </tbody>
-    </table>`;<br><br><br><br>
+    </table>`;
 
     
 								
