--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -174,7 +174,7 @@ th{
     /* ✅ Tables full width */
     table {
         width: 95% !important;
-        height: 57% !important;
+  /*      height: 57% !important;*/
         box-shadow: none;
         webkit-print-color-adjust: exact;
         print-color-adjust: exact;
@@ -391,7 +391,7 @@ th{
      </div>
     </div>    <br>
      
-<div id="table_container"> </div> <!-- Salary Statement table -->
+<div id="table_container"> Signature of DDO </div> <!-- Salary Statement table -->
                                                         	
 
 	
