--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -402,7 +402,7 @@ th{
      
 <div id="table_container"> </div> <!-- Salary Statement table -->
                                                         	
-
+<div class="sign">Signature of DDO  </div> 
 	
 <script>
     /*email id checking */
