--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -618,7 +618,7 @@ const otherRecord = otherSheetData.find(item =>
             <th>P.TAX</th>
             <th>I.TAX</th>
         </tr>
-		<tr> Signature of DDO </>
+<tr> Signature of DDO </tr>
     </thead>
     <tbody>`;
 
