--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -618,7 +618,6 @@ const otherRecord = otherSheetData.find(item =>
             <th>P.TAX</th>
             <th>I.TAX</th>
         </tr>
-<tr> Signature of DDO </tr>
     </thead>
     <tbody>`;
 
@@ -1084,7 +1083,7 @@ setInterval(updateGrossFromStorage, 500);
     }
  
 </script>
-        
+<div class="sign">Signature of DDO  </div> 
 <div class="watermark">https://aionline.in.net</div>
 </body>
 </html>
