--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -401,7 +401,8 @@ th{
     </div>    <br>
      
 <div id="table_container"> </div> <!-- Salary Statement table -->
-                                                        	
+ <br><br><br><br>
+<div class="sign">Signature of DDO &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Signature of Employee  </div>                                                       	
  
 	
 <script>
