--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -402,7 +402,7 @@ th{
      
 <div id="table_container"> </div> <!-- Salary Statement table -->
  <br><br><br><br>
-<div class="sign">Signature of DDO &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Signature of Employee  </div>                                                       	
+<div class="sign">Signature of DDO &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Signature of Employee  </div>                                                       	
  
 	
 <script>
@@ -1084,7 +1084,7 @@ setInterval(updateGrossFromStorage, 500);
     }
  
 </script>
-<div class="sign">Signature of DDO  </div> 
+ 
 <div class="watermark">https://aionline.in.net</div>
 </body>
 </html>
