--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -182,7 +182,7 @@ th{
 
     /* ✅ Tables full width */
     table {
-        width: 95% !important;
+        width: 90% !important;
   /*      height: 57% !important;*/
         box-shadow: none;
         webkit-print-color-adjust: exact;
@@ -248,7 +248,7 @@ th{
 
 <body>
 <div id="loginBox" style="text-align:center;margin-top:100px;">
-  <h3>Login required</h3>
+  <h2>Login required</h2>
   <div id="g_id_onload"
        data-client_id="153331935742-fjjo78i8lp28pj22f95a7bhep6qmmae7.apps.googleusercontent.com"
        data-callback="handleCredentialResponse">
@@ -261,8 +261,8 @@ th{
 
     <div id="salaryContent" style="display:none;">
 
-        <h1>Upload Excel file</h1>
-       <input type="file" id="excel_file" accept=".xlsx,.xls,.xlsm">
+        <h1>Upload Excel Software with employee data</h1>
+       <input type="file" id="excel_file" accept=".xlsm" style="width: 70px; height: 17px;">
 
        <!-- 🔍 SEARCH SECTION -->
       <div id="search_section">
@@ -403,7 +403,7 @@ th{
 <div id="table_container"> </div> <!-- Salary Statement table -->
  <br><br><br><br>
 <div class="sign">Signature of DDO &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Signature of Employee  </div>                                                       	
- 
+ <br><br>
 	
 <script>
     /*email id checking */
