--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -262,7 +262,7 @@ th{
     <div id="salaryContent" style="display:none;">
 
         <h1>Upload Excel Software with employee data</h1>
-       <input type="file" id="excel_file" accept=".xlsm" style="width: 170px; height: 77px;">
+       <input type="file" id="excel_file" accept=".xlsm">
 
        <!-- 🔍 SEARCH SECTION -->
       <div id="search_section">
