--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -295,7 +295,7 @@ th{
       </thead>
       <tbody>
         <tr>
-          <td style="text-align: left;" class="right-border">
+          <td style="text-align: left;" class="right-border" style="font-size:11px;">
             1) Gross Salary Income (March,2025 to February 2026):<br>
             2) Less: Standard Deduction U/S 16(Ia):<br>
             3) Income chargeable under the head salaries (1-2):
@@ -308,7 +308,7 @@ th{
         </tr>
 
         <tr>
-          <td style="text-align: left;" class="right-border" >
+          <td style="text-align: left;" class="right-border" style="font-size:11px;">
             4) Add.: Any other Income reported by the employee:<br>
             <span class="sub-label">(a) Income from House property u/s 26 to 27:</span> &ensp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             <input type="number" id="oia" value="0" oninput="calculateAll()" style="width: 70px;"><br>
@@ -335,7 +335,7 @@ th{
         </tr>
 
         <tr>
-          <td style="text-align: left;" class="right-border" >
+          <td style="text-align: left;" class="right-border" style="font-size:11px;">
             5) Gross Total Income (3+4):<br>
             <span style="color:red;">6) Less: Deduction U/S. 80CCD(2) NPS (Employer):</span><br>
             7) Taxable Income (5 - 6):<br>
@@ -367,7 +367,7 @@ th{
         </tr>
 
         <tr>
-          <td style="text-align: left;" class="right-border" >
+          <td style="text-align: left;" class="right-border" style="font-size:11px;">
             11) <span style="color:red;">Less: Rebate u/s 87A maximum of Rs.60,000/- if Sl No. 8 above is below Rs. 12 lakhs:</span><br>
             12) Tax Payable (10-11) :<br>
             13) <span style="color:blue;">Short Term Capital Gain (20%):</span> &emsp;<input type="number" id="st_cg1" value="0" oninput="calculateAll()"><br>
