--- a/SalStm_TaxCal_Purba_Medinipur.html
+++ b/SalStm_TaxCal_Purba_Medinipur.html
@@ -182,7 +182,7 @@ th{
 
     /* ✅ Tables full width */
     table {
-        width: 90% !important;
+        width: 95% !important;
   /*      height: 57% !important;*/
         box-shadow: none;
         webkit-print-color-adjust: exact;
@@ -222,7 +222,7 @@ th{
 
     .container {
       width: 100%;
-  /*    page-break-before: always; */
+      page-break-before: avoid; 
     }
   
     .right-border {
